# scaffolding_uow

./: .gitignore  Makefile  OOP.py  README.md  cookiecutter.json
envs/: dev.env
migrations/: alembic.ini  env.py
migrations/versions/: initial_migration__20241008175946__a23f6bbff542.py
src/my_project_uow/: auth.py  factories.py
src/my_project_uow/business/entities/: document_entity.py  user_entity.py
src/my_project_uow/business/interfaces/: __init__.py  idocument.py  irepository.py  iuser.py
src/my_project_uow/entrypoints/http_api/: exceptions.py  (+3 more)
src/my_project_uow/utils/: logging_utils.py
src/{{cookiecutter.project_slug}}/: auth.py  factories.py  settings.py
{{cookiecutter.project_slug}}/: README.md  pyproject.toml
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/business/: exceptions.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/business/entities/: __init__.py  coin_entity.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/business/interfaces/: idocument.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/entrypoints/http_api/: exceptions.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/entrypoints/http_api/routers/: my_project_routers.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/entrypoints/{% if cookiecutter.has_cron == 'y' %}cron{% endif %}/: main.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/infrastructure/cache/: fake.py
{{cookiecutter.project_src}}/{{cookiecutter.project_slug}}/infrastructure/: check_db.py
(+22 files in other folders)
